--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         </p>
                     </div>
                     <div class="solution_items conteiner-fluid row">
-                        <div class="d-flex flex-wrap">
+                        <div class="d-lg-flex flex-wrap">
                             <div class="solution_item first h-auto px-5 py-4 col">
                                 <h3 class="solution_item_titel pb-3 row">amo for banking</h3>
                                 <p class="solution_item_content text-start row">
@@ -154,7 +154,7 @@
                             </p>
                         </div>
                         <div class="services_schame row">
-                            <div class="services_schame_item banks px-5 pt-5 mx-5 mb-4 mb-md-0 col-10 col-lg-4">
+                            <div class="services_schame_item banks px-5 pt-5 mx-0 mx-md-5 mb-4 mb-lg-0 col-11 col-lg-4">
                                 <h3 class="services_schame_item_title mb-3 col-12">for Banks</h3>
                                 <p class="services_schame_item_content text-start col-12">
                                     We help banks create appealing customer experiences, engineering secure and reliable applications, and bringing industry
@@ -163,8 +163,8 @@
                                 <img class="img-fluid" src="./scss/img/banks.png" alt="banks">
                             </div>
                             <div class="col-12 col-lg-7">
-                                <div class="services_schame_item merchants mb-4 px-4 pt-5 row">
-                                    <div class="col-6">
+                                <div class="services_schame_item merchants me-3 me-md-0 mb-4 px-4 pt-5 row">
+                                    <div class="col col-md-6">
                                         <h3 class="services_schame_item_title mb-3 col-12">for Merchants</h3>
                                         <p class="services_schame_item_content text-start col-12">
                                             We make merchanting easier and simpler. 
@@ -173,19 +173,19 @@
                                             Transform your business with data-driven, hyper-personalized customer services solutions
                                         </p>
                                     </div>
-                                    <div class="col-6">
+                                    <div class="col-4 col-md-6">
                                         <img class="img-fluid" src="./scss/img/merchants.png" alt="merchants">
                                     </div>
                                 </div>
-                                <div class="services_schame_item business px-4 pt-5 row">
-                                    <div class="col-6">
+                                <div class="services_schame_item business px-4 pt-5 me-3 me-md-0 row">
+                                    <div class="col col-md-6">
                                         <h3 class="services_schame_item_title mb-3 col-12">for Business</h3>
                                         <p class="services_schame_item_content text-start mb-5 col-12">
                                             We help small and large companies reinvent customer experience patterns and implement transformational product
                                             strategies.
                                         </p>
                                     </div>
-                                    <div class="col-6">
+                                    <div class="col-4 col-md-6">
                                         <img class="img-fluid" src="./scss/img/business.png" alt="business">
                                     </div>
                                 </div>
