--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body data-bs-spy="scroll" data-bs-target="#Navbar">
     
-        <div class="wrapper container-fluid pt-2 pt-md-5 pb-5 ps-4 ps-md-5">
+        <div class="wrapper container-fluid pt-2 pt-md-5 pb-5 ps-4 pe-4 pe-md-0 px-lg-5">
             <!--header-->
             <header class="header row my-4 my-lg-5">
 
@@ -36,9 +36,9 @@
                             </li>
                         </ul>
                         <!--offcanvas-->
-                        <button class="navbar-toggler border-0 text-dark me-3 me-lg" type="button" data-bs-toggle="offcanvas"
+                        <button class="navbar-toggler border-0 text-dark me-0 me-sm-2 me-lg" type="button" data-bs-toggle="offcanvas"
                             data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
-                            <span class="navbar-toggler-icon"></span>
+                            <span class="navbar-toggler-icon icon-fluid"></span>
                         </button>
                 
                         <div class="offcanvas offcanvas-end bg-primary col-8" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbar">
@@ -72,7 +72,7 @@
             <!--main-->
             <main data-bs-spy="scroll" data-bs-target="#Navbar" data-bs-offset="0" class="main conteiner-fluid row">
                 <!--baner-->
-                <div class="main_baner conteiner-fluid row text-center px-5 py-5 mx-1 mx-lg-0 rounded-4 bg-light">
+                <div class="main_baner conteiner-fluid row text-center px-2 px-md-5 py-2 py-md-5 mx-1 mx-lg-0 rounded-4 bg-light">
                     <h1 class="main_baner_title mt-1 mt-lg-5 px-1 px-lg-5 pt-1 pt-lg-5 col-12">
                         We are a Ukrainian fintech company that makes complex solutions simple
                     </h1>
@@ -82,7 +82,7 @@
                     </span>
                 </div>
                 <!--solutions-->
-                <div id="solutions" class="conteiner-fluid row mx-0 mx-md-4 my-1 my-lg-5 py-0 py-md-5 px-0 px-lg-5">
+                <div id="solutions" class="conteiner-fluid row ms-2 mx-md-4 my-1 my-lg-5 py-0 py-md-5 px-0 px-lg-5">
                     <div class="conteiner-fluid text-wrap row">
                         <h2 class="solution_title py-4 col-12">Our Solutions</h2>
                         <p class="solution_content text-start col-12">
@@ -94,27 +94,27 @@
                         </p>
                     </div>
                     <div class="solution_items row">
-                        <div class="d-md-flex flex-wrap justify-content-center conteiner-fluid mx-2 mx-md-0 g-3 row">
-                            <div class="solution_item first px-4 px-md-5 py-3 py-md-4 me-lg-3 me-0 col-lg col-12">
+                        <div class="d-md-flex flex-wrap justify-content-center conteiner-fluid mx-1 mx-md-0 g-3 row">
+                            <div class="solution_item first px-5 py-4 me-lg-3 me-0 rounded-4 col-lg col-12">
                                 <h3 class="solution_item_titel pb-3 row">amo for banking</h3>
                                 <p class="solution_item_content text-start row">
                                     Instant issue and process prepaid, debit or credit cards with our high-technology solution, which empowers you to build,
                                     run and optimize your card products.
                                 </p>
                             </div>
-                            <div class="solution_item second px-4 px-md-5 py-3 py-md-4 me-lg-3 me-0 col-lg col-12">
+                            <div class="solution_item second px-5 py-4 me-lg-3 me-0 rounded-4 col-lg col-12">
                                 <h3 class="solution_item_titel pb-3 row">amo for transactions</h3>
                                 <p class="solution_item_content text-start row">
                                     A full set of modular payment-as-a-service solutions to transform your business.
                                 </p>
                             </div>
-                            <div class="solution_item third px-4 px-md-5 py-3 py-md-4 col-lg col-12">
+                            <div class="solution_item third px-5 py-4 rounded-4 col-lg col-12">
                                 <h3 class="solution_item_titel row pb-3">amo for retail</h3>
                                 <p class="solution_item_content text-start row">
                                 Turnkey solution is based on a mobile application that will allow you to raise customer loyalty to a new level.
                                 </p>
                             </div>
-                            <div class="solution_item_fourth h-auto text-start ps-4 ps-md-5 py-3 py-md-4 col-12">
+                            <div class="solution_item fourth h-auto text-start px-5 py-4 rounded-4 col-12">
                                 <h3 class="solution_item_titel pb-3 row">partner ecosystem</h3>
                                 <p class="solution_item_content row">
                                     Our customer-centric platform for partners enables the delivery of smarter, more profitable products that offer
@@ -124,7 +124,7 @@
                         </div>
                     </div>
                     <div class="solution ps-4 pt-0 pt-md-5 mt-5 row">
-                        <h2 class="solution_title mb-5 pe-4 row">We understand the customers’ journey and know what solutions you need</h2>
+                        <h2 class="solution_title text-center text-lg-start mb-5 row">We understand the customers’ journey and know what solutions you need</h2>
                         <p class="solution_content text-start ps-3 pe-0 pe-lg-5 row">
                             We’re creating a more open world, where anyone, anywhere, can open cards, receive or make any kind of payment. We’re
                             changing the customer journey and building new opportunities to scale your business.
@@ -132,7 +132,7 @@
                     </div>
                 </div>
                 <!--technologies-->
-                <div id="technologies" class="row py-1 py-lg-5 px-1 px-lg-5 mx-0 mx-md-4">
+                <div id="technologies" class="row py-1 py-lg-5 px-sm-3 px-lg-5 ms-1 mx-md-4">
                     <div class="ms-2 ms-lg-0 mb-2 mb-lg-5 row">
                         <h2 class="technologies_title mb-4 row">Our Technologies</h2>
                         <p class="technologies_content text-start row">
@@ -140,7 +140,7 @@
                             demanding needs of users
                         </p>
                     </div>
-                    <div class="technologies_schema my-2 my-xl-5 me-5 text-center row">
+                    <div class="technologies_schema my-2 my-xl-5 text-center row">
                         <div class="d-xl-flex flex-wrap align-content-center">
                             <div class="col">
                                 <div class="technologies_item card py-3 mb-5 col">Card Processing</div>
@@ -148,7 +148,7 @@
                             </div>
                             <div class="col">
                                 <div class="technologies_item_amo row">
-                                    <div class="technologies_schema_img col ms-5 pe-5 mt-5" ><img src="./scss/img/AMO.png" class="img_amo img-fluid" alt="AMO"></div>
+                                    <div class="technologies_schema_img col ms-4 ms-md-5 pe-5 mt-5" ><img src="./scss/img/AMO.png" class="img_amo img-fluid" alt="AMO"></div>
                                 </div>
                             </div>
                             <div class="pe-0 pe-xl-5 col">
@@ -158,8 +158,8 @@
                         </div>
                     </div>
                     <div class="technologies_list row">
-                        <h2 class="mt-5 col-12">amofintech creates opportunities that will change your life</h2>
-                        <ul class="technologies_list_items pt-5 ms-4 col">
+                        <h2 class="mt-5 text-center text-lg-start col-12">amofintech creates opportunities that will change your life</h2>
+                        <ul class="technologies_list_items pt-3 pt-md-5 ps-5 col">
                             <li class="technologies_list_item mb-3 col-12">simple implementation in business process (easily integration with your business process)</li>
                             <li class="technologies_list_item mb-3 col-12">convenient ecosystem for partners</li>
                             <li class="technologies_list_item mb-3 col-12">scale quickly with a cloud-based technology</li>
@@ -168,7 +168,7 @@
                     </div>
                 </div>
                 <!--services-->
-                <div id="services" class="py-0 py-xxl-5 my-1 my-xxl-5 px-2 px-lg-4 mx-0 mx-md-2">
+                <div id="services" class="py-0 py-xxl-5 my-1 my-xxl-5 px-3 px-md-4 mx-0 mx-md-2">
                     <div class="d-flex flex-wrap">
                         <div class="mb-4 ms-0 me-1 ms-lg-5 text-wrap row">
                             <h2 class="services_title mb-4 col-12">Our Services</h2>
@@ -177,7 +177,7 @@
                             </p>
                         </div>
                         <div class="services_schame conteiner-fluid row">
-                            <div class="services_schame_item banks px-3 px-lg-5 pt-3 pt-lg-5 mx-0 mx-lg-5 mb-4 mb-xxl-0 col-11 col-lg-4">
+                            <div class="services_schame_item banks px-4 px-lg-5 pt-4 pt-lg-5 ms-3 ms-lg-5 mx-0 mx-lg-4 mb-4 mb-xxl-0 col-11 col-lg-4">
                                 <h3 class="services_schame_item_title mb-3 col-12">for Banks</h3>
                                 <p class="services_schame_item_content text-start col-12">
                                     We help banks create appealing customer experiences, engineering secure and reliable applications, and bringing industry
@@ -185,7 +185,7 @@
                                 </p>
                                 <img class="img-fluid text-center" src="./scss/img/banks.png" alt="banks">
                             </div>
-                            <div class="col-12 col-lg-7">
+                            <div class="ms-3 ms-md-0 col-12 col-lg-7">
                                 <div class="services_schame_item merchants conteiner-fluid me-3 me-md-0 mb-4 px-2 px-md-4 py-3 pb-md-0 pt-md-5 row">
                                     <div class="col col-md-6">
                                         <h3 class="services_schame_item_title mb-3 col-12">for Merchants</h3>
@@ -276,7 +276,7 @@
                 </div>
                 <!--bottom-->
                 <div class="footer_bottom conteiner-fluid ps-0 ps-md-4 me-0 pe-0 row">
-                    <div class="footer_bottom_AMO ms-5 ps-4 ps-md-5 my-3 col-4">© 2023 AMO FinTech LLC.</div>
+                    <div class="footer_bottom_AMO ms-5 ps-2 ps-md-5 my-3 col-4">© 2023 AMO FinTech LLC.</div>
                     <div class="footer_bottom_IN text-end my-3 col-6">
                         <a href="https://www.linkedin.com/company/amo-fintech-llc/">
                             <svg width="20" height="20" fill="none" xmlns="http://www.w3.org/2000/svg">
