--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                 </div>
             </footer>
     
-    <script src="./node_modules/bootstrap/dist/js/bootstrap.js"></script>
-    <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="/./node_modules/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="/./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     </body>
 </html>
